# lerche

./: .gitignore  LICENSE  README.md  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
