[package]
name = "lerche"
version = "0.1.0"
description = "Prototype app with both background blur and rounded corners."
authors = ["Sonicaii"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lerche_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
win_desktop_duplication = "0.10.11"
tokio = "1.43.0"
parking_lot = "0.12.3"

[dependencies.windows]
version = "0.59.0"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]
